@@ -1,3 +1,8 @@
+2010-01-24  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* ProvideTryParseAlternativeTest.cs: New. Unit tests for
+	ProvideTryParseAlternativeRule
+
 2010-01-19  Jb Evain  <jbevain@novell.com>
 
 	* DisposableTypesShouldHaveFinalizerTest.cs: add test for generated
